# fake-reviews-comparison

./: .gitignore  README.md  pyproject.toml
.github/workflows/: validation.yml
src/: __main__.py  bert.py  dataset.py  feed_forward.py  ml_models.py  schema.py  statistical_tests.py  utils.py
src/utils/: data_loading.py  evaluation.py  modeling.py  rich.py
